# starth-website

./: INTEGRATION.md  PRIORITY1_COMPLETE.md  package-lock.json  package.json  pre-dev documentation.pages  promt.md  tsconfig.json
backend/: .env.example  AGENT.md  BACKEND_CONTEXT.md  BACKEND_DEVELOPMENT_DOCUMENTATION.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 202502061200_init_schema_v1.py  202502061230_add_refresh_tokens.py  202502061330_add_subscriptions.py  202502061430_add_vendor_review_note.py  202502071200_add_booking_request_fields.py  202502081200_add_webhook_events.py  202502091200_add_payouts_created_at.py  202502101200_add_moderation_events.py  202502101210_add_disputes.py  202502111200_webhook_event_status_and_ledger_payment_id.py  202502121200_add_payout_id_to_ledger_entries.py  202502131200_add_assets.py  202502141200_add_audit_actor_context.py  374639f26a3d_initial.py  3c7b1eab42d1_add_event_service_id_to_payments.py  5b0f4b7f6c2d_add_audit_logs_and_stripe_customer_id.py  9f2d1c4b6e8a_add_stripe_account_id_to_service_providers.py
backend/app/: main.py
backend/docs/: backend_development_documentation.md
backend/scripts/: reconcile_stripe.py  seed.py  seed_templates.py  start-production.sh
backend/tests/: test_audit_logging.py  test_chat_security.py  test_crud_factory_hardening.py  test_main_rate_limit_middleware.py  test_payment_service.py  test_rate_limit.py  test_security.py  test_subscription_service.py  test_webhooks.py
(+567 files in other folders)
